<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp"
        android:text="@string/test"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@null"
        android:contentDescription="@string/health"
        android:onClick="cartBtn"
        android:src="@drawable/baseline_shopping_cart_24" />

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@null"

        android:contentDescription="@string/health"
        android:src="@drawable/baseline_arrow_back_24" />

    <ScrollView
        android:id="@+id/scroll_view_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backArrow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_search"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/hint_search"
                app:hintTextColor="@color/color_1"
                app:startIconDrawable="@drawable/baseline_search_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_search_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/color_1" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/sample_maingrocery" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>